--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,7 +1,7 @@
 instructors:
-  - name: Saeed Reza Kheradpisheh
+  - name: Dr Hadi Farahani
     profile_pic: /_images/pp/prof.jpg
-    webpage: https://www.linkedin.com/in/saeed-reza-kheradpisheh-7a0b18155/
+    webpage: https://www.linkedin.com/in/hadi-farahani-b7614611a/
 
 teaching_assistants:
   - name: Navid Kashi
