--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Site settings
 course_name: Data Mining
-course_description: 
+course_description:  |
+Data mining is usually associated with the analysis of the large data sets present in the fields of big data, machine learning and artificial intelligence. The process looks for patterns, anomalies and associations in the data with the goal of extracting value.
 
 course_semester: "Spring 2021"
 
