--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -15,8 +15,8 @@ items:
   name: Assignments
   icon_class: fas fa-user-graduate
 
-- url: /project/
-  name: Project
+- url: /soulation/
+  name: Soulation
   icon_class: fas fa-user-graduate
 
 - url: /materials/
